--- a/src/Components/Views/index/index.css
+++ b/src/Components/Views/index/index.css
@@ -26,6 +26,7 @@ h2 {
   height: 30px;
   margin-right: 10px;
 }
+
 .fa-search {
   cursor: pointer;
 }
@@ -86,6 +87,7 @@ h2 {
   0% {
     transform: rotateY(0deg) rotateX(0deg);
   }
+
   100% {
     transform: rotateY(360deg) rotateX(360deg);
   }
@@ -98,13 +100,16 @@ h2 {
 
 /* show more*/
 .containerInfPuzzle {
-  max-height: 400px; /* Establece la altura máxima inicial */
-  overflow: hidden; /* Oculta los elementos que excedan la altura máxima */
+  max-height: 400px;
+  /* Establece la altura máxima inicial */
+  overflow: hidden;
+  /* Oculta los elementos que excedan la altura máxima */
 }
 
 .containerImagePuzzles {
   display: inline-block;
-  width: 50%; /* Para que se muestren dos elementos por línea */
+  width: 50%;
+  /* Para que se muestren dos elementos por línea */
   /* Otros estilos para cada imagen, como margen, espaciado, etc. */
 }
 
@@ -121,7 +126,8 @@ h2 {
 
 /* Estilo adicional para los elementos ocultos */
 .containerInfPuzzle.hidden {
-  max-height: none; /* Restablece la altura máxima para mostrar todos los elementos */
+  max-height: none;
+  /* Restablece la altura máxima para mostrar todos los elementos */
 }
 
 
@@ -129,7 +135,7 @@ h2 {
   margin: 20px;
 }
 
-.search-index-bar{
+.search-index-bar {
   display: flex;
   flex-direction: row;
   margin: 60px 20px 5px 40px;
@@ -149,6 +155,7 @@ h2 {
   height: 30px;
   margin-right: 10px;
 }
+
 .fa-search {
   cursor: pointer;
 }
@@ -167,31 +174,34 @@ h2 {
 }
 
 .link-search-zip-code {
-  text-decoration: none; 
-  color: #D9737B; 
-  font-size: 24px; 
-  margin-left: 20px; 
+  text-decoration: none;
+  color: #D9737B;
+  font-size: 24px;
+  margin-left: 20px;
 }
 
 /* Puzzle pieces box  */
 
 .piece-icon-box {
   display: flex;
-  flex-direction: column; /* Cambia a una dirección de columna para centrar verticalmente */
-  justify-content: center; /* Centra verticalmente */
-  align-items: center; /* Centra horizontalmente */
+  flex-direction: column;
+  /* Cambia a una dirección de columna para centrar verticalmente */
+  justify-content: center;
+  /* Centra verticalmente */
+  align-items: center;
+  /* Centra horizontalmente */
   width: 100%;
   margin-left: 60px;
   /* margin-right: 140px; */
   height: 600px;
 }
 
-.display-available-puzzles{
+.display-available-puzzles {
   margin-bottom: 100px;
   font-size: 30px;
 }
 
-.image-puzzle-zip-code{
+.image-puzzle-zip-code {
   width: 250px;
   height: 150px;
 }
@@ -204,18 +214,18 @@ h2 {
 }
 
 .link-puzzle-Show-Page {
-  text-decoration: none; 
+  text-decoration: none;
   color: #131212;
   margin-left: 40px;
 }
 
-.title-puzze-inf-puzzle{
+.title-puzze-inf-puzzle {
   font-size: 25px;
   font-weight: bold;
   margin-bottom: 20px;
 }
 
-.description-puzze-inf-puzzle{
+.description-puzze-inf-puzzle {
   font-size: 20px;
   font-weight: lighter;
 }
@@ -233,6 +243,7 @@ h2 {
   0% {
     transform: rotateY(0deg) rotateX(0deg);
   }
+
   100% {
     transform: rotateY(360deg) rotateX(360deg);
   }
@@ -243,11 +254,7 @@ h2 {
   height: 250px;
 }
 
-
-
 /*Container puzzle if*/
-
-
 .containerInfPuzzle {
   background-color: #fff2ea;
   align-items: center;
@@ -257,7 +264,7 @@ h2 {
   height: 300px;
   margin: 15px 15px 15px 60px;
   border-radius: 10px;
- 
+
 }
 
 .puzzle {
@@ -275,23 +282,24 @@ h2 {
   font-size: 22px;
   font-weight: bold;
   width: 180px;
-  }
+}
 
 .showMoreindex {
   text-align: center;
 }
 
-
-
 /* show more*/
 .containerInfPuzzle {
-  max-height: 400px; /* Establece la altura máxima inicial */
-  overflow: hidden; /* Oculta los elementos que excedan la altura máxima */
+  max-height: 400px;
+  /* Establece la altura máxima inicial */
+  overflow: hidden;
+  /* Oculta los elementos que excedan la altura máxima */
 }
 
 .containerImagePuzzles {
   display: inline-block;
-  width: 50%; /* Para que se muestren dos elementos por línea */
+  width: 50%;
+  /* Para que se muestren dos elementos por línea */
   /* Otros estilos para cada imagen, como margen, espaciado, etc. */
 }
 
@@ -308,10 +316,11 @@ h2 {
 
 /* Estilo adicional para los elementos ocultos */
 .containerInfPuzzle.hidden {
-  max-height: none; /* Restablece la altura máxima para mostrar todos los elementos */
+  max-height: none;
+  /* Restablece la altura máxima para mostrar todos los elementos */
 }
 
-.message-show-boton{
+.message-show-boton {
   font-size: 28px;
   text-align: center;
 }
