--- a/src/Components/commonComponents/navigationBar/navigationBar.css
+++ b/src/Components/commonComponents/navigationBar/navigationBar.css
@@ -1,9 +1,14 @@
 .nav-bar-button {
-  text-decoration: none; /* Elimina el subrayado predeterminado */
-  padding: 8px 16px; /* Ajusta el relleno según tus preferencias */
-  border: none; /* Elimina el borde */
-  background-color: transparent; /* Establece el fondo transparente */
-  color: black; /* Color del texto para botones sin fondo */
+  text-decoration: none;
+  /* Elimina el subrayado predeterminado */
+  padding: 8px 16px;
+  /* Ajusta el relleno según tus preferencias */
+  border: none;
+  /* Elimina el borde */
+  background-color: transparent;
+  /* Establece el fondo transparente */
+  color: black;
+  /* Color del texto para botones sin fondo */
   cursor: pointer;
 }
 
@@ -19,7 +24,7 @@
   display: flex;
   flex-wrap: wrap;
   font-weight: 900;
-  font-size:x-large;
+  font-size: x-large;
   align-content: center;
   column-gap: 2rem;
 }
@@ -32,5 +37,5 @@
 }
 
 .nav-list li:hover {
-  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+  Color: #D9737B;
 }
