paolandre my collection view with CSS

--- a/src/Components/Views/addNewPuzzle/addNewPuzzle.css
+++ b/src/Components/Views/addNewPuzzle/addNewPuzzle.css
@@ -135,6 +135,10 @@ textarea:focus {
     padding-bottom: 10px;
 }
 
+.status-message {
+    color: #D9737B;
+}
+
 /* Estilos botones*/
 .return-dashboard-button,
 .add-puzzle-button,
