--- a/src/Components/Views/index/index.css
+++ b/src/Components/Views/index/index.css
@@ -173,6 +173,13 @@ h2 {
   margin: 20px;
 }
 
+.search-button:hover {
+  background-color: var(--salmon);
+  border: none;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.15), 0 1px 2px rgba(0, 0, 0, 0.1);
+  color: black
+}
+
 .link-search-zip-code {
   text-decoration: none;
   color: #D9737B;
