natalia392 feat: create function to upload image to cloudinary. Unify all inputs to add new puzzle in a form

--- a/src/Components/Views/addNewPuzzle/addNewPuzzle.css
+++ b/src/Components/Views/addNewPuzzle/addNewPuzzle.css
@@ -188,6 +188,12 @@ textarea:focus {
     flex-direction: column;
 }
 
+/* Estilo inputs imagenes */
+
+.image-upload {
+    display: none;
+}
+
 /* Media Query para dispositivos pequeños */
 @media (max-width: 768px) {
     .container-new-puzzle {
