natalia392 feat: render puzzles requested to user

--- a/src/Components/Views/dashboard/dashboard.css
+++ b/src/Components/Views/dashboard/dashboard.css
@@ -164,6 +164,10 @@
     flex-direction: column;
     justify-content: center;
 }
+/* 
+.pending-message {
+    color:#F2955E;
+} */
 
 /* ---------------------------- IMG STYLES ------------------------------*/
 .puzzle-img-dashboard {
