paolandre some CSS changes

--- a/src/Components/Views/editPuzzle/editPuzzle.css
+++ b/src/Components/Views/editPuzzle/editPuzzle.css
@@ -14,6 +14,7 @@ select {
     resize: none;
     font-family: 'League Spartan', sans-serif;
     outline: none;
+    width: 100%;
 }
 
 select option:hover {
